--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,26 +34,6 @@ jobs:
           name: ${{ env.release_tag }}
           body: ${{ env.issue_list }}
           
-  purge:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-      - name: Determine URLs to purge
-        id: purge_urls
-        run: |
-          baseUrl="https://cdn.jsdelivr.net/gh/${{ github.repository }}@latest"
-          urls=""
-          for f in `find adblock adguard controld dnsmasq domains hosts ips pac rpz share wildcard -name "*.txt" -o -name "*.pac" -o -name "*.json" -type f`; do
-            urls+="${baseUrl}/${f},"
-          done
-          echo "urls=${urls%,*}" >> $GITHUB_OUTPUT
-      - name: Purge CDN cache
-        uses: egad13/purge-jsdelivr-cache@v1.1.0
-        with:
-          url: ${{ steps.purge_urls.outputs.urls }}
-    needs: release
-
   close-issues:
     runs-on: ubuntu-latest
     steps:
@@ -103,6 +83,26 @@ jobs:
             }
     needs: [release, close-issues]
 
+  purge:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+      - name: Determine URLs to purge
+        id: purge_urls
+        run: |
+          baseUrl="https://cdn.jsdelivr.net/gh/${{ github.repository }}@latest"
+          urls=""
+          for f in `find adblock adguard controld dnsmasq domains hosts ips pac rpz share wildcard -name "*.txt" -o -name "*.pac" -o -name "*.json" -type f`; do
+            urls+="${baseUrl}/${f},"
+          done
+          echo "urls=${urls%,*}" >> $GITHUB_OUTPUT
+      - name: Purge CDN cache
+        uses: egad13/purge-jsdelivr-cache@v1.1.0
+        with:
+          url: ${{ steps.purge_urls.outputs.urls }}
+    needs: [release, close-issues, relabel-issues]
+
   stale:
     runs-on: ubuntu-latest
     steps:
@@ -114,7 +114,7 @@ jobs:
         days-before-close: 7
         stale-label: 'no-issue-activity'
         dry-run: 'false'
-    needs: [release, close-issues]
+    needs: [release, close-issues, relabel-issues]
         
   release-cleanup:
     runs-on: ubuntu-latest
@@ -127,7 +127,7 @@ jobs:
           release-drop-tag: true
         env:
           GITHUB_TOKEN: ${{ github.token }}
-    needs: release
+    needs: [release, close-issues, relabel-issues, purge]
     
   workflow-cleanup:
     runs-on: ubuntu-latest
@@ -139,4 +139,4 @@ jobs:
           repository: ${{ github.repository }}
           retain_days: 0
           keep_minimum_runs: 0
-    needs: [release, close-issues, release-cleanup]
+    needs: [release, close-issues, relabel-issues, purge, stale, release-cleanup]
